Adaptation for MongoDB