@@ -7,25 +7,25 @@ import ait.cohort5860.student.dto.StudentDto;
 import ait.cohort5860.student.dto.StudentUpdateDto;
 import ait.cohort5860.student.dto.exceptions.NotFoundException;
 import ait.cohort5860.student.model.Student;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-@Component
+@Service
+@RequiredArgsConstructor
 public class StudentServiceImpl implements StudentService {
-    @Autowired
-    private StudentRepository studentRepository;
+    private final StudentRepository studentRepository;
+    private final ModelMapper modelMapper;
 
     @Override
     public Boolean addStudent(StudentCredentialsDto studentCredentialsDto) {
         if (studentRepository.findById(studentCredentialsDto.getId()).isPresent()) {
             return false;
         }
-        Student student = new Student(studentCredentialsDto.getId(), studentCredentialsDto.getName(), studentCredentialsDto.getPassword());
+        Student student = modelMapper.map(studentCredentialsDto, Student.class);
         studentRepository.save(student);
         return true;
     }
@@ -33,67 +33,60 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public StudentDto findStudent(Long id) {
         Student student = studentRepository.findById(id).orElseThrow(NotFoundException::new);
-        return new StudentDto(student.getId(), student.getName(), student.getScores());
+        return modelMapper.map(student, StudentDto.class);
     }
 
     @Override
     public StudentDto removeStudent(Long id) {
         Student student = studentRepository.findById(id).orElseThrow(NotFoundException::new);
-        studentRepository.deleteById(student);
-        return new StudentDto(student.getId(), student.getName(), student.getScores());
+        studentRepository.deleteById(student.getId());
+        return modelMapper.map(student, StudentDto.class);
     }
 
 
     @Override
     public StudentDto updateStudent(Long id, StudentUpdateDto studentUpdateDto) {
         Student student = studentRepository.findById(id).orElseThrow(NotFoundException::new);
-        student.setName(studentUpdateDto.getName());
-        student.setPassword(studentUpdateDto.getPassword());
+        if (studentUpdateDto.getName() != null) {
+            student.setName(studentUpdateDto.getName());
+        }
+        if (studentUpdateDto.getPassword() != null) {
+            student.setPassword(studentUpdateDto.getPassword());
+        }
         studentRepository.save(student);
-        return findStudent(id);
+        return modelMapper.map(student, StudentDto.class);
     }
 
     @Override
     public Boolean addScore(Long id, ScoreDto scoreDto) {
         Student student = studentRepository.findById(id).orElseThrow(NotFoundException::new);
-        boolean added = student.addScore(scoreDto.getExamName(), scoreDto.getScore());
+        boolean result = student.addScore(scoreDto.getExamName(), scoreDto.getScore());
         studentRepository.save(student);
-        return added;
+        return result;
     }
 
 
     @Override
     public List<StudentDto> findStudentsByName(String name) {
-        return studentRepository.findAll().stream()
-                .filter(student -> student.getName().equalsIgnoreCase(name))
+        return studentRepository.findByNameIgnoreCase(name)
                 .map(student -> new StudentDto(
                         student.getId(),
                         student.getName(),
                         student.getScores()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Long countStudentsByName(Set<String> names) {
-        return studentRepository.findAll().stream()
-                .filter(student -> names.contains(student.getName()))
-                .count();
+        return studentRepository.countByNameIn(names);
     }
 
 
     @Override
-    public List<StudentDto> findStudentsByExamMinScore(String examName, Integer minScore) {
-        return studentRepository.findAll().stream()
-                .filter(student -> {
-                    Integer score = student.getScores().get(examName);
-                    return score != null && score <= minScore;
-                })
-                .map(student -> new StudentDto(
-                        student.getId(),
-                        student.getName(),
-                        student.getScores()
-                ))
-                .collect(Collectors.toList());
+    public List<StudentDto> findByExamAndScoreGreaterThan(String examName, Integer minScore) {
+        return studentRepository.findByExamAndScoreGreaterThan(examName, minScore)
+                .map(s -> new StudentDto(s.getId(), s.getName(), s.getScores()))
+                .toList();
     }
 }
